# cupcake

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __main__.py  blog.html  index.html  markdown-page.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run  run.bat  sitemap.xml  test.py
.github/workflows/: deploy-docs.yml  python-package.yml
api-reference/: index.html
assets/css/: styles.0525982b.css
assets/js/: 082fc35e.26e5d419.js  0e384e19.88373e51.js  0e384e19.99d2e611.js  17896441.ac99f9cf.js  18c41134.306d0d06.js  18c41134.60707643.js  1e4232ab.f66f28b7.js  (+45 more)
blog/: archive.html  atom.xml  rss.xml  tags.html  welcome.html
components/: __init__.py  base.py  breakpoint.py  canvas.py  config.py  editor.py  empty.py  events.py  frame.py  highlighter.py  ln.py  minimap.py  root.py  style.py  syntax.py  text.py  textw.py
config/: config.json
cupcake/: __init__.py  editor.py  languages.py
docs/: .buildinfo  README.md  api-reference.md  docusaurus.config.js  genindex.html  index.html  index.md  intro.html  intro.md  objects.inv  package-lock.json  search.html  searchindex.js
examples/: basic.py  diff.py  hello.py  image.py  light.py  typescript.py  utils.py
proposals/: README.md  diff_cv.py  draggable.py  find_replace.py  minimap_enhanced.py  scrollable_autocomplete.py  scrollbar.py  showspace.py  test.py  todo.txt  treeview_completions.py
samples/: README.md  hello.cpp  helloworld.cpp
search/: search_index.json
src/: __init__.py
tests/: test_cupcake.py  test_editor.py  test_find_replace.py
(+124 files in other folders)
