[tool.poetry]
name = "cupcake-editor"
version = "0.5.1"
description = "Embeddable code editor for tkinter"
authors = ["Billy <billydevbusiness@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cupcake" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
