[tool.poetry]
name = "cupcake"
version = "0.15.0"
description = "Embeddable code editor for python apps"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "cupcake" }
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
