[tool.poetry]
name = "cupcake-editor"
version = "0.25.8"
description = "Embeddable text editor with autocompletions"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "cupcake" }
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
